<resources>
    <string name="app_name">BeautyPal</string>
    <string name="title_activity_home">Beauty Pal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_register_activity">One more step to go</string>
    <string name="avatar_text">Avatar</string>
    <string name="name_text">Name</string>
    <string name="contact_text">Phone Number</string>
    <string name="email_hint">Email Address</string>
    <string name="address_hint">Address</string>
    <string name="gender_hint">Gender</string>
    <string name="register_btn_text">Complete</string>
    <string name="title_activity_salonist_dashboard">Dashboard</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="user_name">User Name</string>
    <string name="avatar_desc">User Avatar</string>
    <string name="beauty_shop">Beauty Shop</string>
    <string name="go_back_icon">Go Back Icon</string>
    <string name="all_salons">All Salons</string>
    <string name="anim">Animation</string>
    <string name="beauty_shops">Beauty Shops</string>
    <string name="beauty_consultant">Beauty Consultant</string>
    <string name="beauty_tips">Beauty Tips</string>
    <string name="one_more_step">One More Step</string>
    <string name="personal_details">Personal Details</string>
    <string name="official_name">Official Name...</string>
    <string name="circular_prompt_image">Circular Prompt Image</string>
    <string name="location_on">Location On</string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="official_email_address">Official Email Address</string>
    <string name="website_optional">Website(Optional)</string>
    <string name="change">Change</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="services">Services</string>
    <string name="hair">Hair:</string>
    <string name="add">Add</string>
    <string name="nails">Nails:</string>
    <string name="skin_care">Skin Care</string>
    <string name="make_up">Make Up</string>
    <string name="beauty_products">Beauty Products</string>
    <string name="select_day_from">Select Day From:</string>
    <string name="availability">Availability</string>
    <string name="to">To:</string>
    <string name="select_time_from">Select time from:</string>
    <string name="setup">Setup</string>
    <string name="tips">Tips</string>
    <string name="products">Products</string>
    <string name="beauty_client">Beauty Client</string>
    <string name="beauty_salonist">Beauty Salonist</string>
    <string name="beauty_shop_owner">Beauty Shop Owner</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="service_name">Service Name</string>
    <string name="service_cost">Service Cost</string>

    <!--String Arrays-->
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!--Pay Via-->

    <string-array name="pay_via">
        <item>-- Pay Via --</item>
        <item>M-Pesa</item>
        <item>Paypal</item>
        <item>Bank</item>
    </string-array>

    <!--Day Time-->
    <string-array name="day_time">
        <item>7.00 am</item>
        <item>8.00 am</item>
        <item>9.00 am</item>
        <item>10.00 am</item>
        <item>11.00 am</item>
        <item>12.00 pm</item>
        <item>1.00 pm</item>
        <item>2.00 pm</item>
        <item>3.00 pm</item>
        <item>4.00 pm</item>
        <item>5.00 pm</item>
        <item>6.00 pm</item>
        <item>7.00 pm</item>
        <item>8.00 pm</item>
        <item>9.00 pm</item>
        <item>10.00 pm</item>
    </string-array>

    <!--Beauty Packages-->
    <string-array name="beauty_packages">
        <item>-- Package -- </item>
        <item>Hair</item>
        <item>Nails</item>
        <item>Make Up</item>
        <item>Skin Care</item>
    </string-array>

    <string-array name="tips_packages">
        <item>-- Tip Package --</item>
        <item>Hair</item>
        <item>Face</item>
        <item>Eyes</item>
        <item>Skin</item>
        <item>Hands</item>
        <item>Feet</item>
    </string-array>

    <string name="hello_blank_fragment">New Fragment In Town</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="add_service">Add Service</string>
    <string name="remember_me">Remember me?</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_account">Don\'t have an account, Sign Up here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="salon_image_desc">Salon Display Image</string>
    <string name="salon_name">Salon Name</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="owner">Owner</string>
    <string name="salonist_name">Salonist Name</string>

    <string name="open_from">Open From</string>
    <string name="open_to">Open To</string>
    <string name="website">Website</string>
    <string name="package_text">Package</string>
    <string name="which_package">Which Package</string>
    <string name="service">Service</string>
    <string name="cost">Cost</string>
    <string name="salon">Salon</string>
    <string name="beauty_shop_dashboard">Beauty Shop Dashboard</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product Name</string>
    <string name="reservations">Reservations</string>
    <string name="product_image">Product Image</string>
    <string name="product_cost">Product Cost</string>
    <string name="home_page">Home page</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="gallery">Gallery</string>
    <string name="feedback">Feedback</string>
    <string name="appointments">Appointments</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="go_back">Go Back</string>
    <string name="beautiful_lady">Beautiful Lady</string>
    <string name="tip_default_desc">Tip Description ...</string>
    <string name="my_salon">My Salon</string>
    <string name="register_a_salon">Register A Salon</string>
    <string name="finish">Finish</string>
    <string name="salon_cover_image">Salon Cover Image</string>
    <string name="info">Info</string>
    <string name="offers">Offers</string>
    <string name="client">Client:</string>
    <string name="client_name">Client Name...</string>
    <string name="requested_service">Requested Service</string>
    <string name="date_hint">Date:</string>
    <string name="select_date_hint">Select Date</string>
    <string name="time">Time:</string>
    <string name="select_time">Select Time</string>
    <string name="client_reservation">Client Reservation</string>
    <string name="notification_response">Notification Response</string>
    <string name="set_reservation">Set Reservation</string>
    <string name="type">Type...</string>
    <string name="item">Item...</string>
    <string name="default_time">07:10 04/07/2019</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_cover_image">Shop Cover Image</string>
    <string name="shop_name">Shop Name...</string>
    <string name="product_purchase_disclaimer">Pay at least half the price before delivery</string>
    <string name="billing_information">Billing Information</string>
    <string name="account_no">Account No.</string>
    <string name="how_much">How Much...</string>
    <string name="request_product">Request Product</string>
    <string name="send_request">Send Request</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="add_tip">Add Tip</string>
    <string name="tip_image">Tip Image</string>
    <string name="tip_description">Tip Description</string>
    <string name="tip_diet">Tip Diet</string>
    <string name="tip_remedy">Tip Remedy</string>
    <string name="default_location">Default Location</string>
    <string name="request_service">Request Service</string>
    <string name="consultants">Consultants</string>
    <string name="message">Message...</string>
    <string name="default_msgs">0 messages</string>
    <string name="send_icon">Send Icon</string>
    <string name="default_likes">0 likes</string>
    <string name="default_followers">0 followers</string>
    <string name="default_following">0 following</string>
    <string name="default_tip_count">0 tips</string>
    <string name="follow">Follow</string>
    <string name="dummy_message">Dummy Message...</string>
    <string name="enter_message">Enter Message...</string>
    <string name="read_more">Read More</string>
</resources>
