<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_shop_details"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/shop_details" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_invert_colors_black_24dp"
        android:title="@string/products" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_reservations"
        android:icon="@drawable/ic_details_black_24dp"
        android:title="@string/reservations" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
</menu>