<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.mercie.example.fragments.client.ChangeProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:text="@string/title_register_activity" />

    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/avatar_text"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/name_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/contact_text"
        android:inputType="phone" />

    <EditText
        android:id="@+id/gender_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/gender_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/register_btn_text"
        android:textColor="@android:color/white" />

</LinearLayout>
