<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_register_salon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cover_image_iv"
            android:layout_width="@dimen/dimen_288dp"
            android:layout_height="@dimen/dimen_192dp"
            android:layout_marginTop="@dimen/tv_padding"
            android:layout_marginBottom="@dimen/tv_padding"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/salon_cover_image"
            android:scaleType="centerCrop" />


        <EditText
            android:id="@+id/name_et"
            android:layout_width="@dimen/dimen_288dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:hint="@string/salon_name"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/tv_padding">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/location_on"
                android:src="@drawable/ic_location_on_gray_24dp" />

            <EditText
                android:id="@+id/location_tv"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tv_padding"
                android:hint="@string/location"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/tv_padding">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/mobile_number"
                android:src="@drawable/ic_phone_black_24dp" />

            <EditText
                android:id="@+id/mobile_et"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tv_padding"
                android:hint="@string/mobile_number"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/tv_padding">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/website_optional"
                android:src="@drawable/ic_public_gray_24dp" />

            <EditText
                android:id="@+id/website_et"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tv_padding"
                android:hint="@string/website_optional"
                android:inputType="textWebEmailAddress" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/services"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/hair_cb"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/hair" />

            <ImageView
                android:id="@+id/hair_cb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_black_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/nails_cb"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/nails" />

            <ImageView
                android:id="@+id/nails_cb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_black_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/skin_care_cb"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/skin_care" />

            <ImageView
                android:id="@+id/skin_care_cb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_black_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/make_up_cb"
                android:layout_width="@dimen/setup_et_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/make_up" />

            <ImageView
                android:id="@+id/make_up_cb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_black_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/availability"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/select_day_from" />

            <Spinner
                android:id="@+id/spinner_day_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/to" />

            <Spinner
                android:id="@+id/spinner_day_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/select_time_from" />

            <Spinner
                android:id="@+id/spinner_time_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/to" />

            <Spinner
                android:id="@+id/spinner_time_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />
        </LinearLayout>

        <Button
            android:layout_width="@dimen/dimen_288dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="registerSalon"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>