<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddTipActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/go_back"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tip"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/tip_iv"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/tip_image"
            android:src="@mipmap/products_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/package_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tips_packages" />

            <Button
                android:id="@+id/change_img_btn"
                android:layout_width="@dimen/dimen_96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/change"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/tip_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tip_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/tip_remedy_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tip_remedy"
        android:inputType="textMultiLine" />


    <EditText
        android:id="@+id/tip_diet_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tip_diet"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/add_tip_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_tip"
        android:textAllCaps="false" />


</LinearLayout>